--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.3.1",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
+    "@mui/system": "^6.4.3",
     "@mui/x-data-grid": "^7.23.5",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
